--- a/Makefile.am
+++ b/Makefile.am
@@ -7,6 +7,7 @@ tempsrccppdir = $(datadir)/adt/templates/source/cpp
 tempsrcpasdir = $(datadir)/adt/templates/source/pascal
 adtincludedir = $(datadir)/adt/include
 adtpascaldir  = $(datadir)/adt/ADLibPascal
+adtfclstldir  = $(datadir)/adt/ADLibPascal/fcl-stl
 dist_tempmakeac_DATA = templates/make/autoconf/configure.ac templates/make/autoconf/Makefile.am templates/make/autoconf/init_config.sh templates/make/autoconf/COPYING templates/make/autoconf/INSTALL templates/make/autoconf/README templates/make/autoconf/ChangeLog
 dist_tempmakevs_DATA = templates/make/VisualStudio/base.sln templates/make/VisualStudio/base.vcxproj templates/make/VisualStudio/note.txt
 dist_tempmakelz_DATA = templates/make/Lazarus/base.lpi
@@ -14,3 +15,4 @@ dist_tempsrccpp_DATA = templates/source/cpp/base.cpp templates/source/cpp/base.h
 dist_tempsrcpas_DATA = templates/source/pascal/base.lpr templates/source/pascal/base.mk templates/source/pascal/base_Unit.pas templates/source/pascal/Rbase_Unit.pas
 dist_adtinclude_DATA = sample/include/common.bbdef sample/include/stdlib.f sample/include/cpp_macros.txt sample/include/pascal_macros.txt sample/include/my_adlib.txt sample/include/my_extlib.txt
 dist_adtpascal_DATA  = src/ADLibPascal/*.pas src/ADLibPascal/*.inc src/ADLibPascal/make_template_code
+dist_adtfclstl_DATA  = src/ADLibPascal/fcl-stl/*.pp
