--- a/Makefile.am
+++ b/Makefile.am
@@ -3,6 +3,7 @@ dist_doc_DATA = INSTALL README ChangeLog
 tempmakeacdir = $(datadir)/adt/templates/make/autoconf
 tempmakevsdir = $(datadir)/adt/templates/make/VisualStudio
 tempmakelzdir = $(datadir)/adt/templates/make/Lazarus
+tempmakexcdir = $(datadir)/adt/templates/make/Xcode
 tempsrccppdir = $(datadir)/adt/templates/source/cpp
 tempsrcpasdir = $(datadir)/adt/templates/source/pascal
 adtincludedir = $(datadir)/adt/include
@@ -11,6 +12,7 @@ adtfclstldir  = $(datadir)/adt/ADLibPascal/fcl-stl
 dist_tempmakeac_DATA = templates/make/autoconf/configure.ac templates/make/autoconf/Makefile.am templates/make/autoconf/init_config.sh templates/make/autoconf/COPYING templates/make/autoconf/INSTALL templates/make/autoconf/README templates/make/autoconf/ChangeLog
 dist_tempmakevs_DATA = templates/make/VisualStudio/base.sln templates/make/VisualStudio/base.vcxproj templates/make/VisualStudio/note.txt
 dist_tempmakelz_DATA = templates/make/Lazarus/base.lpi
+dist_tempmakexc_DATA = templates/make/Lazarus/project.pbxproj
 dist_tempsrccpp_DATA = templates/source/cpp/base.cpp templates/source/cpp/base.hpp templates/source/cpp/Rbase.cpp templates/source/cpp/Rbase.hpp templates/source/cpp/base_registration.cpp templates/source/cpp/base.mk templates/source/cpp/run_mk
 dist_tempsrcpas_DATA = templates/source/pascal/base.lpr templates/source/pascal/base.mk templates/source/pascal/base_Unit.pas templates/source/pascal/Rbase_Unit.pas
 dist_adtinclude_DATA = sample/include/common.bbdef sample/include/stdlib.f sample/include/cpp_macros.txt sample/include/pascal_macros.txt sample/include/my_adlib.txt sample/include/my_extlib.txt
