--- a/objs/java_parse/Makefile.am
+++ b/objs/java_parse/Makefile.am
@@ -8,4 +8,4 @@ libjava_y_a_SOURCES = ../../src/java_y.y
 libjava_l_a_SOURCES = ../../src/java_l.l
 
 clean-local:
-	-rm -f java_l.c java_y.c java_y.h
+	-rm -f ../../src/java_l.c ../../src/java_y.c ../../src/java_y.h
