--- a/objs/make_parse/Makefile.am
+++ b/objs/make_parse/Makefile.am
@@ -9,4 +9,4 @@ libmake_y_a_SOURCES = ../../src/make_y.y
 libmake_l_a_SOURCES = ../../src/make_l.l
 
 clean-local:
-	-rm -f make_l.c make_y.c make_y.h
+	-rm -f ../../src/make_l.c ../../src/make_y.c ../../src/make_y.h
