Add means of installing dll's and creating VS import libs

--- a/ScilabOptim/makefile
+++ b/ScilabOptim/makefile
@@ -122,3 +122,6 @@ $(OUT): $(objects)
 clean : 
 	rm $(OUTLIB) $(OUT) $(objects)
 
+install : 
+	cp $(OUT) ../objs/$(WIN_TARGET)/Debug/.
+	cp $(OUT) ../objs/$(WIN_TARGET)/Release/.
